# sentry-react-native

./: .clang-format  .craft.yml  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .oxfmtrc.json  .prettierignore  .snyk  .swiftlint.yml  .travis.yml  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CI.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  RNSentry.podspec  RNSentryFramesTrackerListener.h  RNSentryPrivate.podspec  SDK-VERSIONS.md  SentryReactNative.podspec  THIRD_PARTY_NOTICES.md  agents.toml  app.plugin.js  build.gradle.kts  dangerfile.js  expo.d.ts  index.js  jest.config.js  jest.config.tools.js  lerna.json  metro.d.ts  metro.js  (+9 more)
.claude/: settings.json
.cursor/: BUGBOT.md
.github/: .ci_ignore_files  CODEOWNERS  ISSUE_TEMPLATE.md  censor.yml  dependabot.yml  file-filters.yml  pull_request_template.md  release-drafter.yml  release.yml
.travis/: before_install.sh  deploy.sh  run.sh
RNSentryAndroidTester/: build.gradle  gradle.properties  settings.gradle
RNSentryCocoaTester/: Podfile
RNSentryTester/: Podfile
android/: build.gradle  local.properties  proguard-rules.pro
appium/: Gemfile  Makefile  check_run_failues.rb  conftest.py  example  requirements.txt
docs/: cocoapods.rst  codepush.rst  config.rst  expo.rst  index.rst  manual-setup.rst  sentry-doc-config.json  sourcemaps.rst
e2e/: App.js  Podfile  e2e.test.js  (+5 more)
sample-new-architecture/android/app/src/main/jni/: CMakeLists.txt  MainApplicationModuleProvider.cpp  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h  OnLoad.cpp
(+1168 files in other folders)
